archive/devops/default/sonarr/sonarr-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr
spec:
  hosts:
  - "sonarr.holthome.net"
  gateways:
  - ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8989
        host: sonarr
